<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp">

    <!-- LinearLayout to stack the cards vertically -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="12dp">

        <!-- Card for T-Shirts -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="12dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="20dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardview_dark_background">

                <ImageView
                    android:id="@+id/item_image_shirt"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/tshirt_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/shirt" />

                <TextView
                    android:id="@+id/item_label_shirt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/abril_fatface"
                    android:padding="8dp"
                    android:text="@string/t_shirts"
                    android:textColor="@color/black"
                    android:textSize="48sp"
                    android:textStyle="bold" />
            </FrameLayout>
        </androidx.cardview.widget.CardView>

        <!-- Card for Trousers -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="12dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="20dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardview_dark_background">

                <ImageView
                    android:id="@+id/item_image_trousers"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/trousers_image"
                    android:scaleType="centerCrop"
                    android:src="@drawable/trousers" />

                <TextView
                    android:id="@+id/item_label_trousers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/abril_fatface"
                    android:padding="8dp"
                    android:text="@string/trousers"
                    android:textColor="@color/black"
                    android:textSize="48sp"
                    android:textStyle="bold" />
            </FrameLayout>
        </androidx.cardview.widget.CardView>

        <!-- Card for Shoes -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="8dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="20dp">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/cardview_dark_background">

                <ImageView
                    android:id="@+id/item_image_shoes"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/shoes_image"
                    android:src="@drawable/shoes" />

                <TextView
                    android:id="@+id/item_label_shoes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:fontFamily="@font/abril_fatface"
                    android:padding="8dp"
                    android:text="@string/shoes"
                    android:textColor="@color/black"
                    android:textSize="48sp"
                    android:textStyle="bold" />
            </FrameLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>
