<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".cart">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtShopping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:text="@string/shopping_cart"
            android:textColor="@color/black"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="61dp"
            android:layout_height="45dp"
            android:layout_marginStart="104dp"
            android:layout_marginTop="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/txtShopping"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/baseline_shopping_cart_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_cart"
        android:layout_width="398dp"
        android:layout_height="620dp"
        android:padding="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout2" />

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="50dp"
        app:layout_constraintBottom_toBottomOf="@+id/recycler_cart"
        app:layout_constraintEnd_toEndOf="@+id/recycler_cart"
        app:layout_constraintHorizontal_bias="0.606"
        app:layout_constraintStart_toStartOf="@+id/recycler_cart">

        <Button
            android:id="@+id/btnContinueShopping"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:text="@string/continue_shopping" />

        <Button
            android:id="@+id/btnCheckout"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:scaleX="0.9"
            android:scaleY="0.9"
            android:text="@string/proceed_to_checkout" />

    </GridLayout>


</androidx.constraintlayout.widget.ConstraintLayout>